--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -96,9 +96,9 @@ main {
             .modal-content {
                 background-color: #fefefe;
                 margin: 15% auto;
-                padding: 20px;
-                border: 1px solid #888;
-                width: 80%;
+                padding: 2em;
+                border: 0.1 solid #888;
+                width: 50%;
 
                 display: flex;
                 flex-direction: column;
