--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -4,6 +4,7 @@
 @import '../scss/main';
 @import '../scss/header';
 @import '../scss/footer';
+@import '../scss/login';
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
