--- a/assets/scss/_login.scss
+++ b/assets/scss/_login.scss
@@ -8,8 +8,69 @@
     background-image: url("../img/imgs/backgroundLogin.png");
     background-repeat: no-repeat;
     background-position: center top;
+    background-size: 120%;
+
+    display: flex;
+    justify-content: center;
 
     main {
         display: flex;
+        flex-direction: column;
+
+        #L1 {
+            display: flex;
+            flex-direction: column;
+            width: 60%;
+
+            h4 {
+                font-weight: bold;
+                padding: 1.5em;
+            }
+
+            a {
+                color: gray;
+                text-decoration: none;
+            }
+
+            button {
+                background-color: black;
+                border: 0;
+                border-radius: 0.5em;
+                color: gray;
+                padding: 1.6em 0;
+                margin: 0.8em 0;
+            }
+
+            input {
+                padding: 1.5em 0;
+            }
+        }
+
+        #L2 {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+
+            border: 0.05em solid rgb(170, 169, 169);
+            border-radius: 0.8em;
+            padding: 0.4em 0;
+            margin: 1em 0;
+            width: 60%;
+
+            img {
+                width: 4em;
+            }
+        }
+
+        #L3 {
+            display: flex;
+            justify-content: space-around;
+
+            p {
+                color: gray;
+                font-size: 0.9em;
+                padding: 0 0.3em;
+            }
+        }
     }
 }
